--- a/styles/travel.css
+++ b/styles/travel.css
@@ -156,3 +156,47 @@ nav a {
     color: #FFF;
     margin-top: 32px;
 }
+
+.tour-description {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 24px;
+}
+
+.tour-description>ul {
+    color: #5A5A5D;
+    font-size: 16px;
+    font-weight: 400;
+    margin-top: 24px;
+}
+
+.destination {
+    margin-top: 100px;
+    text-align: center;
+    padding: 0 135px;
+}
+
+.img-container {
+    width: 1440px;
+    margin-top: 50px;
+}
+
+.row {
+    margin-bottom: 24px;
+    display: flex;
+    height: 300px;
+    padding: 0 135px;
+    gap: 24px;
+    align-items: center;
+}
+
+.mid img {
+    height: 286px;
+}
+
+.choose {
+    padding: 0 135px;
+    margin-top: 100px;
+    text-align: center;
+}
