--- a/styles/travel.css
+++ b/styles/travel.css
@@ -255,3 +255,96 @@ nav a {
     font-weight: 400;
     line-height: 26px;
 }
+
+.blog {
+    margin-top: 100px;
+    text-align: center;
+}
+
+.blog-content {
+    display: flex;
+    width: 1170px;
+    justify-content: space-between;
+    padding: 0 135px;
+    gap: 45px;
+    border-radius: 16px;
+}
+
+.subscrib {
+    width: 1170px;
+    margin-top: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 135px;
+    gap: 24px;
+}
+
+.news {
+    width: 474px;
+    height: 422px;
+    border-radius: 16px;
+    border: 1px solid #FF5400;
+    padding: 40px;
+}
+
+.letter {
+    color: #131318;
+    font-size: 24px;
+    font-weight: 800;
+    padding-top: 40px;
+    padding-left: 40px;
+}
+
+.tour-desc {
+    padding-left: 40px;
+}
+
+.name {
+    padding-left: 40px;
+    width: 393px;
+    height: 52px;
+    color: rgba(19, 19, 24, 0.30);
+    font-size: 16px;
+    font-weight: 400;
+    border: none;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+
+}
+
+.email {
+    width: 393px;
+    height: 52px;
+    padding-left: 40px;
+    color: rgba(19, 19, 24, 0.30);
+    font-size: 16px;
+    font-weight: 400;
+    border: none;
+    border-radius: 8px;
+    background: rgba(19, 19, 24, 0.05);
+}
+
+.submit {
+    width: 393px;
+    height: 52px;
+    border-radius: 8px;
+    background: #FF5400;
+    border: none;
+    padding-left: 40px;
+    color: #FFF;
+    text-align: center;
+    font-size: 20px;
+    font-weight: 800;
+}
+
+hr {
+    width: 393px;
+    height: 1px;
+    background: rgba(19, 19, 24, 0.10);
+    margin: 24px;
+}
+
+.footer-content {
+    margin-top: 100px;
+
+}
