--- a/styles/travel.css
+++ b/styles/travel.css
@@ -344,7 +344,100 @@ hr {
     margin: 24px;
 }
 
+.discount-badge {
+    border-radius: 16px;
+    background: #FF5400;
+    width: 324px;
+    height: 120px;
+    transform: rotate(-19.628deg);
+    text-align: center;
+}
+
+.discount-badge h2 {
+    color: #FFF;
+    text-align: center;
+    font-size: 24px;
+    font-weight: 400;
+    margin: 0;
+}
+
+.discount-badge p {
+    color: #FFF;
+    font-size: 32px;
+    font-weight: 800;
+}
+
+footer {
+    width: 100%;
+    height: 100%;
+}
+
 .footer-content {
     margin-top: 100px;
+    text-align: center;
+    background: rgba(19, 19, 24, 0.05);
+    width: 1440px;
+    height: 502px;
+}
 
+.footer-description {
+    width: 769px;
+    padding-top: 165px;
+    padding-left: 335px;
+    color: #5A5A5D;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+.footer-title {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    margin-top: 110px;
+}
+
+.footer-title div {
+    color: #131318;
+    font-size: 36px;
+    font-weight: 800;
+}
+
+.footer-img {
+    margin-top: 32px;
+    gap: 24px;
+}
+
+.right {
+    text-align: center;
+    color: #131318;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: normal;
+
+}
+
+
+@media screen and (max-width: 600px) {
+    header {
+        padding: 20px;
+    }
+
+    body {
+        width: 375px;
+    }
+
+    .banner {
+        width: 335px;
+        height: 483px;
+    }
+
+    nav {
+        flex-direction: column;
+    }
+
+    .tour {
+        flex-direction: column;
+    }
 }
