--- a/styles/travel.css
+++ b/styles/travel.css
@@ -185,7 +185,6 @@ nav a {
 .row {
     margin-bottom: 24px;
     display: flex;
-    height: 300px;
     padding: 0 135px;
     gap: 24px;
     align-items: center;
@@ -428,16 +427,149 @@ footer {
         width: 375px;
     }
 
+    .banner-title {
+        color: #FFF;
+        font-size: 22px;
+        font-weight: 800;
+        padding-top: 50px;
+    }
+
+    .banner-description {
+        font-size: 14px;
+        margin: 0;
+    }
+
+    .info {
+        gap: 5px;
+        width: 335px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .tour {
+        padding: 0;
+        width: 335px;
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .tour-container {
+        width: 335px;
+    }
+
+    .tour-title {
+        font-size: 20px;
+    }
+
+    .tour-description {
+        font-size: 14px;
+    }
+
+    .destination {
+        margin-top: 24px;
+        padding: 0;
+    }
+
+    .img-container {
+        width: 375px;
+    }
+
+    .img-container img {
+        width: 335px;
+    }
+
+    .row {
+        flex-direction: column;
+    }
+
+    .card-1 {
+        width: 335px;
+
+    }
+
+    .card-2 {
+        width: 335px;
+    }
+
+    .card-title {
+        font-size: 20px;
+    }
+
+    .card-des {
+        font-size: 14px;
+    }
+
+    .card-content {
+        flex-direction: column;
+        width: 375px;
+        padding: 0;
+    }
+
+    .card-cont {
+        flex-direction: column;
+        padding: 0;
+    }
+
+    .card {
+        width: 335px;
+    }
+
+    .blog-content {
+        flex-direction: column;
+        padding: 0 10px;
+    }
+
+    .blog-content2 img {
+        width: 335px;
+    }
+
+    .choose {
+        padding: 0 10px;
+        margin-top: 24px;
+    }
+
+    .subscrib {
+        width: 335px;
+        padding: 0 10px;
+        flex-direction: column;
+    }
+
+    .letter {
+        font-size: 20px;
+    }
+
+    .news {
+        width: 335px;
+    }
+
+    .name {
+        width: 288px;
+    }
+
+    .email {
+        width: 288px;
+    }
+
+    hr {
+        width: 288px;
+    }
+
+    .submit {
+        width: 288px;
+    }
+
+    .blog-content {
+        width: 335px;
+    }
+
     .banner {
         width: 335px;
         height: 483px;
     }
 
     nav {
-        flex-direction: column;
-    }
-
-    .tour {
         flex-direction: column;
     }
 }
